--- a/package.json
+++ b/package.json
@@ -14,13 +14,10 @@
     "@tanstack/react-query": "^5.86.0",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.2",
-    "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.19.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.8.2",
     "react-router-dom": "^7.8.2",
