--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.86.0",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
+    "firebase": "^12.2.1",
     "jsonwebtoken": "^9.0.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
