--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.9.1",
     "react-router-dom": "^7.8.2",
-    "react-share": "^5.2.2"
+    "react-share": "^5.2.2",
+    "sweetalert2": "^11.23.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
