--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
     "@tanstack/react-query": "^5.86.0",
-    "axios": "^1.11.0",
+    "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "firebase": "^12.2.1",
     "jsonwebtoken": "^9.0.2",
@@ -22,6 +22,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.9.1",
     "react-router-dom": "^7.8.2",
+    "react-select": "^5.10.2",
     "react-share": "^5.2.2",
     "sweetalert2": "^11.23.0"
   },
