--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^5.0.0",
+    "@stripe/stripe-js": "^8.0.0",
     "@tailwindcss/vite": "^4.1.12",
     "@tanstack/react-query": "^5.90.2",
     "axios": "^1.12.2",
+    "axios-hooks": "^5.1.1",
     "bcrypt": "^6.0.0",
     "firebase": "^12.2.1",
     "jsonwebtoken": "^9.0.2",
