--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios-hooks": "^5.1.1",
     "bcrypt": "^6.0.0",
     "firebase": "^12.2.1",
+    "framer-motion": "^12.23.24",
     "jsonwebtoken": "^9.0.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
