--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@stripe/react-stripe-js": "^5.0.0",
     "@stripe/stripe-js": "^8.0.0",
     "@tailwindcss/vite": "^4.1.12",
-    "@tanstack/react-query": "^5.90.2",
+    "@tanstack/react-query": "^5.90.5",
     "axios": "^1.12.2",
     "axios-hooks": "^5.1.1",
     "bcrypt": "^6.0.0",
@@ -28,6 +28,7 @@
     "react-router-dom": "^7.9.2",
     "react-select": "^5.10.2",
     "react-share": "^5.2.2",
+    "recharts": "^3.3.0",
     "sweetalert2": "^11.23.0"
   },
   "devDependencies": {
